Update Journal End points + security